// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `Array []`;

exports[`2- addAct - should add account 1`] = `
Array [
  Object {
    "name": "user1",
  },
]
`;

exports[`3- addAct - should add account 1`] = `
Array [
  Object {
    "name": "user1",
  },
  Object {
    "name": "user2",
  },
]
`;

exports[`4- addAct - should update account 1`] = `
Array [
  Object {
    "name": "user2",
  },
  Object {
    "__loaded": true,
    "name": "user1",
    "post_count": 10,
  },
]
`;
